assets/css/core.css
:root{
    --secondary-text-color: rgb(87, 87, 87);
}

body{
    background: white;
	font-family: 'Open Sans', sans-serif;
	font-display: swap;
    min-width: 320px;
    max-width: 1000px;
    margin: 0 auto;
    padding: 0 20px;
}

a{
    color: var(--secondary-text-color);
}

hr{
    height: 8px;
    background-image: linear-gradient(90deg, rgb(240, 69, 240), rgb(46, 99, 245));
    border: none;
}

h1,h2,h3{
    color: rgb(20, 20, 20);
    font-family: "Heebo", sans-serif;
}

h1{
    font-size: 3em;
}

h2{
    font-size: 2em;
}

h3{
    font-size: 1.5em;
}

header{
    padding: 5% 0;
}

header p{
    font-size: 1.6em;
}

code{
    display: block;
    padding: 10px;
    background: rgb(243, 243, 243);
    margin: 10px 0;
}

p{
    color: var(--secondary-text-color);
}

section{
    margin: 50px 0;
}

footer{
    text-align: center;
    padding: 10px;
}

@media only screen and (min-width:60em) { 
	.content{
        padding-left: 50px;
    }
}

.content{
    margin: 3em 0;
}

.content p{
    margin: 20px 0 20px 0;
}

.link-button{
    display: inline-block;
    background: rgb(243, 243, 243);
    padding: 10px;
    border-radius: 5px;
    text-decoration: none;
    color: var(--secondary-text-color);
    transition: background .5s;
}

.link-button:hover{
    background: rgb(190, 190, 190);
}

#contact table{
    margin: 0;
}

@media only screen and (max-width:60em) { 
	#contact td{
        display: block;
    }
}

#contact td{
    padding: 5px 10px;
}

#contact td:first-child{
    font-weight: bold;
}

.flip-card h1 {
	color: white;
	font-size: 2em;
	padding: 10px 0;
	margin: 0;
}

.flip-card {
	margin: 20px;
	height: 200px;
	background-color: transparent;
	perspective: 1000px;
}

.flip-card-inner {
	position: relative;
	width: 100%;
	height: 100%;
	transition: all 0.8s ease-in-out;
	transform-style: preserve-3d;
}

.flip-card:hover .flip-card-back {
	height: 100%;
}

.flip-card-front, .flip-card-back {
	transition: height 0.4s ease-in-out;
	position: absolute;
	border-radius: 10px;
	width: 100%;
	height: 100%;
	backface-visibility: hidden;
}

.flip-card-front {
	background: #333;
	background: linear-gradient( rgba(0, 0, 0, 0.4), rgba(0, 0, 0, 0.8) ), var(--image) no-repeat center center/cover;
	color: white;
}

.flip-card-back {
	overflow: hidden;
	color: white;
	height: 10px;
}

.flip-card-back .card-content {
	display: flex;
	width: 100%;
	justify-content: center;
	font-size: 2em;
	align-items: baseline;
}

.flip-card-back .card-content i {
	padding: 20px;
	text-decoration: none;
	color: white;
}

/* Render a copy of the image below the card to look like a drop shadow */
.flip-card::before {
	content: "";
	transition: all .4s ease-in-out;
	position: absolute;
	width: 95%;
	height: 100%;
	top: 5%;
	left: calc(5% / 2);
	z-index: -1;
	border-radius: 50px;
	background: var(--image) 
				no-repeat 
				center center/cover;
	filter: blur(10px);
}

/* Shrink the "drop shadow" when the user hovers over the card */
.flip-card:hover::before{
    transform: scale(0.9);
}

.card-content {
	position: absolute;
	padding: 20px;
	bottom: 0;
}

